Fixed typos in setup post.

--- a/source/_posts/2012-03-26-my-setup.md
+++ b/source/_posts/2012-03-26-my-setup.md
@@ -32,7 +32,7 @@ When I used Windows I was a fan of Notepad++ and I looked for something similar 
 
 ## IDE: [Jetbrains PyCharm](http://www.jetbrains.com/pycharm/)
 
-PyCharm isn't cheap but anyone who's familiar with Jetbrains IntelliJ (for Java) knows that Jetbrains knows how to make productive, yet attractive, IDEs. PyCharm also offers great Django and Flask support. I've used Eclipse for university projects but it's always been too cumbersome and slow for me.
+PyCharm isn't cheap but anyone who's familiar with Jetbrains' IntelliJ (for Java) knows that Jetbrains knows how to make productive, yet attractive, IDEs. PyCharm also offers great Django and Flask support. I've used Eclipse for university projects but it's always been too cumbersome and slow for me.
 
 ## Terminal: [iTerm2](http://www.iterm2.com/#/section/home), [ZSH](http://zsh.sourceforge.net/), and [oh-my-zsh](https://github.com/robbyrussell/oh-my-zsh)
 
@@ -56,7 +56,7 @@ Sadly, when I enabled Full Disk Encryption on my MacBook Air I was no longer abl
 
 ## Media: [VLC](http://videolan.org), [XBMC](http://xbmc.org/) 12.0 RC2 Frodo
 
-For those odd file types, VLC handles everything with ease. I've even had a lot of luck with it playing corrupted files. I prefer to not have iTunes managing my media library so I just open my Music directory with VLC and it works great.
+For those odd media file types, VLC handles everything with ease. I've even had a lot of luck with it playing corrupted files. I prefer to not have iTunes managing my media library so I just open my Music directory with VLC and it works great.
 For managing movies and TV shows, you just can't beat XBMC. It fetches background art, HD trailers, and IMDB ratings for every movie in your collection. This is all with the default configuration. There's also an amazing remote control app for your Android device called [Yatse](https://play.google.com/store/apps/details?id=org.leetzone.android.yatsewidgetfree&hl=en).
 
 
